samples/_failures_safe/1761143340_9fd3ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_473b6f8a.c: In function ‘main’:
./samples/SAFE/__tmp_473b6f8a.c:144:51: error: expected ‘)’ at end of input
  144 |     printf("Original size: %zu bytes\n", input_buf
      |           ~                                       ^
      |                                                   )
./samples/SAFE/__tmp_473b6f8a.c:144:5: error: expected declaration or statement at end of input
  144 |     printf("Original size: %zu bytes\n", input_buf
      |     ^~~~~~
